added link to music.ly

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                     </div> -->
                                 </div>
                                 
-                                <h3 class="title mb-3"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/launch-bootstrap-4-template-for-saas-businesses/" target="_blank">Music.ly - Custom playlist builder and songs database</a></h3>
+                                <h3 class="title mb-3"><a href="https://github.com/cdmccune/DevM-Capstone-Music.ly" target="_blank">Music.ly - Custom playlist builder and songs database</a></h3>
                                     
                                 <div class="desc text-start">                                    
                                     <p>My first fullstack web application. Created to allow the user to express their own music preference by forming custom playlists and accessing data directly from the Spotify API. The result is a user experience that is not only useful, but also enjoyable and satisfying to interact with. </p>
