changed info on the project and added a favicon

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                     </div> -->
                                 </div>
                                 
-                                <h3 class="title mb-3"><a href="https://github.com/cdmccune/DevM-Capstone-Music.ly" target="_blank">Music.ly - Custom playlist builder and songs database</a></h3>
+                                <h3 class="title mb-3"><a href="https://musicly-capstone-f21.herokuapp.com/" target="_blank">Music.ly - Custom playlist builder and songs database</a></h3>
                                     
                                 <div class="desc text-start">                                    
                                     <p>My first fullstack web application. Created to allow the user to express their own music preference by forming custom playlists and accessing data directly from the Spotify API. The result is a user experience that is not only useful, but also enjoyable and satisfying to interact with. </p>
@@ -119,7 +119,8 @@
                                         <!-- <li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow"></i></a></li>    -->
                                         <!-- <li class="list-inline-item last-item"><a href="#"><i class="fab fa-codepen"></i></a></li>                 -->
                                     </ul> 
-                                    <a class="btn btn-cta-secondary" href="https://github.com/cdmccune/DevM-Capstone-Music.ly" target="_blank">Open on Github - <i class="fab fa-github-alt"></i></a>
+                                    <a class="btn btn-cta-secondary" href="https://musicly-capstone-f21.herokuapp.com/" target="_blank">Hosted Site - <i class="fa fa-music"></i></a>
+                                    <a class="btn btn-cta-secondary" href="https://github.com/cdmccune/DevM-Capstone-Music.ly" target="_blank">Github - <i class="fab fa-github-alt"></i></a>
                                 </div>        
                             </div><!--//item-->
                             <hr class="divider" style="display: none;"/>
