added my resume link

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                             <ul class="list-unstyled">
                                 <li><i class="fas fa-map-marker-alt"></i><span class="sr-only">Location:</span>Fort Collins, CO, US</li>
                                 <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a href="#">curtmccunedeveloper@gmail.com</a></li>
-                                <li><i class="fas fa-link"></i><span class="sr-only">Resume</span><a href="#">Resume</a></li>
+                                <li><i class="fas fa-link"></i><span class="sr-only">Resume</span><a href="https://docs.google.com/document/d/1V3znZvgNS0XAycI5Qy5-34k7r3HIsGdv/edit?usp=sharing&ouid=105530727840005377704&rtpof=true&sd=true">Resume</a></li>
                             </ul>
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
