--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 
                 <section class="experience section">
                     <div class="section-inner shadow-sm rounded">
-                        <h2 class="heading">Experience</h2>
+                        <h2 class="heading">Experiences</h2>
                         <div class="content">
                             <div class="item">
                                     <h3 class="title">iOS Development Trainee - <span class="place"><a href="https://devmountain.com/ios-bootcamp-immersive">Dev Mountain</a></span> <span class="year">(2022-Present)</span></h3>
