added firebase to skills

--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
                                         <li class="list-inline-item technology-list"><i class="devicon-swift-plain technology-text"></i><label>Swift</label></li>
                                         <li class="list-inline-item technology-list"><i class="fab fa-uikit technology-text"></i><label>UIKit</label></li>
                                         <li class="list-inline-item technology-list"><img src="./assets/images/coreData.png" style="height: 80px; margin-bottom: 0;"><label>CoreData</label></li>
+                                        <li class="list-inline-item technology-list"><img src="./assets/images/firebase-icon.png" style="height: 80px; margin-bottom: 0;"><label>Firebase</label></li>
                                         <li class="list-inline-item technology-list"><i class="devicon-git-plain technology-text"></i><label>Git</label></li>
                                         <li class="list-inline-item technology-list"><i class="devicon-nodejs-plain technology-text"></i><label>Nodejs</label></li>
                                         <li class="list-inline-item technology-list"><i class="devicon-javascript-plain technology-text"></i><label>Javascript</label></li>
