--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     "/>
 		            <div class="profile-content">
 		                <h1 class="name">Curt McCune</h1>
-		                <h2 class="desc">iOS Developer</h2>   
+		                <h2 class="desc">Software Developer</h2>   
 		                <ul class="social list-inline">
 		                    <!-- <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li> -->
 		                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/curt-mccune/"><i class="fab fa-linkedin-in"></i></a></li>
