Changed paragraph text to software

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="section-inner shadow-sm rounded">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I am a 26 year old with many passions. Community and forming/maintaining connections with those around me is very important. I love to work hard. Producing quality work and reducing wasted time is something that fuels me. In interacting with me you’ll find that blend between efficiency and personability to be an encouraging and rewarding experience. Currently building a career in iOS development, feel free to contact with any questions and/or opportunities!</p>
+                            <p>I am a 26 year old with many passions. Community and forming/maintaining connections with those around me is very important. I love to work hard. Producing quality work and reducing wasted time is something that fuels me. In interacting with me you’ll find that blend between efficiency and personability to be an encouraging and rewarding experience. Currently building a career in software development, feel free to contact with any questions and/or opportunities!</p>
                          
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
