--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 </div>
 
                                 
-                                <h3 class="title mb-3"><a href="https://apps.apple.com/is/app/fitsw-for-personal-trainers/id1184011053" target="_blank">FitSW - Personal Training Softare - Lead iOS Developer</a></h3>
+                                <h3 class="title mb-3"><a href="https://apps.apple.com/is/app/fitsw-for-personal-trainers/id1184011053" target="_blank">FitSW - Personal Training Software - Lead iOS Developer</a></h3>
                                     
                                 <div class="desc text-start">                                    
                                     <p>The FitSW iOS app has rating of 4.8 with over 1600 reviews and an average of 1700 monthly users. FitSW is fitness software that enables personal trainers build their businesses by designing workout and nutrition plans. Our software is available on iOS, Android, and Web. As the lead iOS developer, I spearhead the mobile side of every new feature we implement from the first design talks all the way to the finished shipped code. There are several major projects I have taken from start to finish:
